# Mahjong

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  SUMMARY.md  pylintrc  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: code-quality.yml
Doc/: Design-Document.md  envrionment.md
models/: Mahjong.py
src/mahjong/: GameInitial.py  card.py  gameInitial.py  game_initial.py  player.py
tests/: test_card.py  test_mahjong.py
