[tool.poetry]
name = "Mahjong-as-a-Service"
version = "0.1.0"
description = ""
authors = ["Saker Lin <iamsaker.s001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
